--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 </head>
 <body>
+    <h1>Base et infos</h1>
     <div class="iconsrow">
         <div class="icon web">
             <img src="./web.svg">
@@ -16,6 +17,12 @@
         <div class="icon rss">
             <img src="./rss.svg">
         </div>
+        <div class="icon wiki">
+            <img src="./wiki.svg">
+        </div>
+    </div>
+    <h1>Diffusion RSS</h1>
+    <div class="iconsrow">
         <div class="icon apple">
             <img src="./apple.svg">
         </div>
@@ -28,12 +35,24 @@
         <div class="icon deezer">
             <img src="./deezer.svg">
         </div>
+        <div class="icon podcastaddict">
+            <img src="./podcastaddict.svg">
+        </div>
         <div class="icon podcloud">
             <img src="./podcloud.svg">
         </div>
+    </div>
+    <h1>Diffusion autre</h1>
+    <div class="iconsrow">
         <div class="icon youtube">
             <img src="./youtube.svg">
         </div>
+        <div class="icon soundcloud">
+            <img src="./soundcloud.svg">
+        </div>
+    </div>
+    <h1>Communauté</h1>
+    <div class="iconsrow">
         <div class="icon twitter">
             <img src="./twitter.svg">
         </div>
@@ -49,14 +68,24 @@
         <div class="icon twitch">
             <img src="./twitch.svg">
         </div>
-        <div class="icon wiki">
-            <img src="./wiki.svg">
-        </div>
+    </div>
+    <h1>Financement</h1>
+    <div class="iconsrow">
         <div class="icon shop">
             <img src="./shop.svg">
+        </div>
+        <div class="icon tipeee">
+            <img src="./tipeee.svg">
+        </div>
+        <div class="icon patreon">
+            <img src="./patreon.svg">
+        </div>
+        <div class="icon paypal">
+            <img src="./paypal.svg">
         </div>
         <div class="icon tip">
             <img src="./tip.svg">
         </div>
     </div>
+    
 </body>
