--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <div class="iconsrow">
         <div class="icon youtube">
             <img src="./youtube.svg">
+        </div><div class="icon dailymotion">
+            <img src="./dailymotion.svg">
         </div>
         <div class="icon soundcloud">
             <img src="./soundcloud.svg">
