--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-    <h1>Base et infos</h1>
+    <h1>Base et références externes</h1>
     <div class="iconsrow">
         <div class="icon web">
             <img src="./web.svg">
@@ -20,8 +20,14 @@
         <div class="icon wiki">
             <img src="./wiki.svg">
         </div>
+        <div class="icon github">
+            <img src="./github.svg">
+        </div>
+        <div class="icon medium">
+            <img src="./medium.svg">
+        </div>
     </div>
-    <h1>Diffusion RSS</h1>
+    <h1>Diffusion</h1>
     <div class="iconsrow">
         <div class="icon apple">
             <img src="./apple.svg">
@@ -42,12 +48,15 @@
             <img src="./podcloud.svg">
         </div>
     </div>
-    <h1>Diffusion autre</h1>
+    <h1>&nbsp;</h1>
     <div class="iconsrow">
         <div class="icon youtube">
             <img src="./youtube.svg">
         </div><div class="icon dailymotion">
             <img src="./dailymotion.svg">
+        </div>
+        <div class="icon vimeo">
+            <img src="./vimeo.svg">
         </div>
         <div class="icon soundcloud">
             <img src="./soundcloud.svg">
@@ -69,6 +78,26 @@
         </div>
         <div class="icon twitch">
             <img src="./twitch.svg">
+        </div>
+       
+    </div>
+    <h1>&nbsp;</h1>
+    <div class="iconsrow">
+        <div class="icon snapchat">
+            <img src="./snapchat.svg">
+        </div>
+        <div class="icon linkedin">
+            <img src="./linkedin.svg">
+        </div>
+        <div class="icon reddit">
+            <img src="./reddit.svg">
+        </div>
+        
+        <div class="icon whatsapp">
+            <img src="./whatsapp.svg">
+        </div>
+        <div class="icon tiktok">
+            <img src="./tiktok.svg">
         </div>
     </div>
     <h1>Financement</h1>
