--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
         <div class="icon shop">
             <img src="./shop.svg">
         </div>
+        <div class="icon amazon">
+            <img src="./amazon.svg">
+        </div>
         <div class="icon tipeee">
             <img src="./tipeee.svg">
         </div>
@@ -117,6 +120,17 @@
         <div class="icon tip">
             <img src="./tip.svg">
         </div>
+        <div class="icon onlyfan">
+            <img src="./onlyfan.svg">
+        </div>
+        
     </div>
-    
+    <h1>Autres</h1>
+    <div class="iconsrow">
+        <div class="icon link">
+            <img src="./link.svg">
+        </div><div class="icon info">
+            <img src="./info.svg">
+        </div>
+    </div>
 </body>
