--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <div class="icon podcloud">
             <img src="./podcloud.svg">
         </div>
+        <div class="icon podmust">
+            <img src="./podmust.svg">
+        </div>
     </div>
     <h1>&nbsp;</h1>
     <div class="iconsrow">
@@ -92,7 +95,9 @@
         <div class="icon reddit">
             <img src="./reddit.svg">
         </div>
-        
+        <div class="icon telegram">
+            <img src="./telegram.svg">
+        </div>
         <div class="icon whatsapp">
             <img src="./whatsapp.svg">
         </div>
