--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         <div class="icon twitch">
             <img src="./twitch.svg">
         </div>
-       
+        <div class="icon steam">
+            <img src="./steam.svg">
+        </div>
     </div>
     <h1>&nbsp;</h1>
     <div class="iconsrow">
@@ -125,10 +127,6 @@
         <div class="icon tip">
             <img src="./tip.svg">
         </div>
-        <div class="icon onlyfan">
-            <img src="./onlyfan.svg">
-        </div>
-        
     </div>
     <h1>Autres</h1>
     <div class="iconsrow">
@@ -136,6 +134,12 @@
             <img src="./link.svg">
         </div><div class="icon info">
             <img src="./info.svg">
+        </div>
+        <div class="icon pornhub">
+            <img src="./pornhub.svg">
+        </div>
+        <div class="icon onlyfan">
+            <img src="./onlyfan.svg">
         </div>
     </div>
 </body>
