--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
         <div class="icon paypal">
             <img src="./paypal.svg">
         </div>
+        <div class="icon utip">
+            <img src="./utip.svg">
+        </div>
         <div class="icon tip">
             <img src="./tip.svg">
         </div>
